k8s/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: healthcare-triage-dev
  labels:
    app: auth-service
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8001
      targetPort: http
