k8s/service-mock-ai.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-ai-service
  namespace: healthcare-triage-dev
  labels:
    app: mock-ai-service
    environment: dev
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  selector:
    app: mock-ai-service
  ports:
    - name: http
      port: 8000
      targetPort: http
