k8s/service-triage.yaml
apiVersion: v1
kind: Service
metadata:
  name: triage-engine
  namespace: healthcare-triage-dev
  labels:
    app: triage-engine
    environment: dev
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8002"
spec:
  type: ClusterIP
  selector:
    app: triage-engine
    track: blue
  ports:
    - name: http
      port: 8002
      targetPort: http
